gitea/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Remove the middleware annotation if not used
    # traefik.ingress.kubernetes.io/router.middlewares: "awx@kubernetescrd"
spec:
  tls:
  - hosts:
    - gitea.k3s.internal
    secretName: gitea-k3s-internal
  rules:
  - host: gitea.k3s.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
